--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -126,7 +126,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
-@mixin footer-adress-font() {
+@mixin footer-address-font() {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
