--- a/css/main.css
+++ b/css/main.css
@@ -325,132 +325,6 @@ body {
   margin: 0px auto;
 }
 
-.hero-section-btn {
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option);
-}
-
-.hero-section-btn:hover, .hero-section-btn:active, .hero-section-btn:focus {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
-}
-
-.subscribe-button {
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px 28px 10px 29px;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option);
-}
-
-.subscribe-button:hover, .subscribe-button:focus, .subscribe-button:active {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
-  fill: var(--button-hover-text-color);
-}
-
-.sub-icon {
-  margin-left: 10px;
-  fill: var(--main-white-color);
-}
-
-.filter-btn {
-  padding: 6px 22px 6px 22px;
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  background-color: var(--secondary-background-color);
-  color: var(--secondary-black-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option), box-shadow var(--main-effects-option);
-}
-
-.filter-btn:focus, .filter-btn:hover, .filter-btn:active {
-  background-color: var(--main-blue-color);
-  color: var(--main-white-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.filter-btn.current {
-  background-color: var(--main-blue-color);
-  color: var(--main-white-color);
-}
-
-.modal-close-btn {
-  position: absolute;
-  right: 8px;
-  top: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: transparent;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.modal-close-btn:hover {
-  cursor: pointer;
-}
-
-.modal-close-btn:hover,
-.modal-close-btn:focus .close-icon {
-  fill: var(--main-blue-color);
-}
-
-.close-icon {
-  transition: fill var(--main-effects-option);
-}
-
-.modal-submit-btn {
-  padding: 10px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: var(--main-blue-color);
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--main-white-color);
-  cursor: pointer;
-  transition: color var(--main-effects-option), background-color var(--main-effects-option);
-}
-
-.modal-submit-btn:hover, .modal-submit-btn:active, .modal-submit-btn:focus {
-  background-color: var(--button-hover-color);
-  color: var(--button-hover-text-color);
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -632,6 +506,29 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.hero-section-btn {
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option);
+}
+
+.hero-section-btn:hover, .hero-section-btn:active, .hero-section-btn:focus {
+  background-color: var(--button-hover-color);
+  color: var(--button-hover-text-color);
 }
 
 .features {
@@ -1043,11 +940,67 @@ body {
   outline: none;
 }
 
+.subscribe-button {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 28px 10px 29px;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option);
+}
+
+.subscribe-button:hover, .subscribe-button:focus, .subscribe-button:active {
+  background-color: var(--button-hover-color);
+  color: var(--button-hover-text-color);
+  fill: var(--button-hover-text-color);
+}
+
+.sub-icon {
+  margin-left: 10px;
+  fill: var(--main-white-color);
+}
+
 .projects-filter-list {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 50px;
   justify-content: center;
+}
+
+.filter-btn {
+  padding: 6px 22px 6px 22px;
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  background-color: var(--secondary-background-color);
+  color: var(--secondary-black-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option), box-shadow var(--main-effects-option);
+}
+
+.filter-btn:focus, .filter-btn:hover, .filter-btn:active {
+  background-color: var(--main-blue-color);
+  color: var(--main-white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.filter-btn.current {
+  background-color: var(--main-blue-color);
+  color: var(--main-white-color);
 }
 
 .projects-filter-item:not(:last-child) {
@@ -1163,6 +1116,30 @@ body {
   left: 50%;
   transform: scale(1) translate(-50%, -50%);
   transition: transform var(--main-effects-option);
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: transparent;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-close-btn:hover {
+  cursor: pointer;
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus .close-icon {
+  fill: var(--main-blue-color);
+}
+
+.close-icon {
+  transition: fill var(--main-effects-option);
 }
 
 .modal-title {
@@ -1305,7 +1282,30 @@ body {
   text-decoration-skip-ink: none;
 }
 
-.hero-section-btn, .subscribe-button, .filter-btn, .modal-close-btn, .modal-submit-btn, .modal-check-text, .modal-check-text span {
+.modal-submit-btn {
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  font-family: Roboto, sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option), background-color var(--main-effects-option);
+}
+
+.modal-submit-btn:hover, .modal-submit-btn:active, .modal-submit-btn:focus {
+  background-color: var(--button-hover-color);
+  color: var(--button-hover-text-color);
+}
+
+.hero-section-btn, .subscribe-button, .filter-btn, .modal-close-btn, .modal-check-text, .modal-check-text span, .modal-submit-btn {
   display: flex;
   align-items: center;
   text-align: center;
