--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -106,3 +106,28 @@
   color: rgba(255, 255, 255, 0.6);
   outline: none;
 }
+.subscribe-button {
+  @extend %flex-elements;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 28px 10px 29px;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  @include main-buttons-font();
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option),
+    background-color var(--main-effects-option);
+  &:hover,
+  &:focus,
+  &:active {
+    background-color: var(--button-hover-color);
+    color: var(--button-hover-text-color);
+    fill: var(--button-hover-text-color);
+  }
+}
+.sub-icon {
+  margin-left: 10px;
+  fill: var(--main-white-color);
+}
