--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -22,3 +22,23 @@
   background-position: center;
   background-size: cover;
 }
+.hero-section-btn {
+  padding: 10px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--main-blue-color);
+  border: none;
+  border-radius: 4px;
+  @include main-buttons-font();
+  @extend %flex-elements;
+  color: var(--main-white-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option),
+    background-color var(--main-effects-option);
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: var(--button-hover-color);
+    color: var(--button-hover-text-color);
+  }
+}
