--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -4,6 +4,31 @@
   margin-bottom: 50px;
   justify-content: center;
 }
+.filter-btn {
+  padding: 6px 22px 6px 22px;
+  border: none;
+  border-radius: 4px;
+  @include portfolio-filter-btn-font();
+  @extend %flex-elements;
+  background-color: var(--secondary-background-color);
+  color: var(--secondary-black-color);
+  cursor: pointer;
+  transition: color var(--main-effects-option),
+    background-color var(--main-effects-option),
+    box-shadow var(--main-effects-option);
+  &:focus,
+  &:hover,
+  &:active {
+    background-color: var(--main-blue-color);
+    color: var(--main-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+.filter-btn.current {
+  background-color: var(--main-blue-color);
+  color: var(--main-white-color);
+}
 .projects-filter-item:not(:last-child) {
   margin-right: 8px;
 }
