--- a/css/main.css
+++ b/css/main.css
@@ -1142,7 +1142,7 @@ body {
   transition: fill var(--main-effects-option);
 }
 
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
   font-family: Roboto, sans-serif;
   font-style: normal;
@@ -1153,11 +1153,11 @@ body {
   color: var(--secondary-black-color);
 }
 
-.form-field {
+.modal__form-field {
   margin-bottom: 10px;
 }
 
-.modal-input-wrap {
+.modal__input-wrap {
   position: relative;
 }
 
@@ -1169,7 +1169,7 @@ body {
   transition: fill var(--main-effects-option);
 }
 
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -1180,15 +1180,15 @@ body {
   transition: border-color var(--main-effects-option);
 }
 
-.modal-input:focus {
+.modal__input:focus {
   border-color: var(--main-blue-color);
 }
 
-.modal-input:focus + .input-icon {
+.modal__input:focus + .input-icon {
   fill: var(--main-blue-color);
 }
 
-.input-label {
+.input__label {
   display: block;
   margin-bottom: 4px;
   font-family: Roboto, sans-serif;
@@ -1200,12 +1200,12 @@ body {
   color: var(--main-text-color);
 }
 
-.comment-field {
+.modal__comment-field {
   display: block;
   margin-bottom: 20px;
 }
 
-.modal-comment-area {
+.modal__comment-area {
   display: block;
   resize: none;
   width: 100%;
@@ -1217,11 +1217,11 @@ body {
   outline: none;
 }
 
-.modal-comment-area:focus {
+.modal__comment-area:focus {
   border-color: var(--main-blue-color);
 }
 
-.modal-comment-area::placeholder {
+.modal__comment-area::placeholder {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1231,11 +1231,11 @@ body {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-checkbox-field {
+.modal__checkbox-field {
   margin-bottom: 30px;
 }
 
-.modal-check-text {
+.modal__checkbox-text {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -1245,7 +1245,7 @@ body {
   color: var(--main-text-color);
 }
 
-.modal-check-text span {
+.modal__checkbox-text span {
   width: 16px;
   height: 15px;
   border: 2px solid var(--main-black-color);
@@ -1253,24 +1253,24 @@ body {
   margin-right: 8px;
 }
 
-.icon-check {
+.checkbox-icon {
   fill: transparent;
 }
 
-.modal-check:focus + .modal-check-text span {
+.modal__checkbox:focus + .modal__checkbox-text span {
   border-color: var(--main-blue-color);
 }
 
-.modal-check:checked + .modal-check-text span {
+.modal__checkbox:checked + .modal__checkbox-text span {
   background-color: var(--main-blue-color);
   border: none;
 }
 
-.modal-check:checked + .modal-check-text .icon-check {
+.modal__checkbox:checked + .modal__checkbox-text .checkbox-icon {
   fill: var(--main-white-color);
 }
 
-.terms-link {
+.checkbox__terms {
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -1282,7 +1282,7 @@ body {
   text-decoration-skip-ink: none;
 }
 
-.modal-submit-btn {
+.modal__submit-button {
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
@@ -1300,12 +1300,12 @@ body {
   transition: color var(--main-effects-option), background-color var(--main-effects-option);
 }
 
-.modal-submit-btn:hover, .modal-submit-btn:active, .modal-submit-btn:focus {
+.modal__submit-button:hover, .modal__submit-button:active, .modal__submit-button:focus {
   background-color: var(--button-hover-color);
   color: var(--button-hover-text-color);
 }
 
-.hero-section-btn, .subscribe-button, .filter-btn, .modal-close-btn, .modal-check-text, .modal-check-text span, .modal-submit-btn {
+.hero-section-btn, .subscribe-button, .filter-btn, .modal-close-btn, .modal__checkbox-text, .modal__checkbox-text span, .modal__submit-button {
   display: flex;
   align-items: center;
   text-align: center;
