--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -47,15 +47,15 @@
   transition: fill var(--main-effects-option);
 }
 
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
   @include modal-title-font();
   color: var(--secondary-black-color);
 }
-.form-field {
+.modal__form-field {
   margin-bottom: 10px;
 }
-.modal-input-wrap {
+.modal__input-wrap {
   position: relative;
 }
 .input-icon {
@@ -65,7 +65,7 @@
   left: 12px;
   transition: fill var(--main-effects-option);
 }
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -81,17 +81,17 @@
     fill: var(--main-blue-color);
   }
 }
-.input-label {
+.input__label {
   display: block;
   margin-bottom: 4px;
   @include modal-label-font();
   color: var(--main-text-color);
 }
-.comment-field {
+.modal__comment-field {
   display: block;
   margin-bottom: 20px;
 }
-.modal-comment-area {
+.modal__comment-area {
   display: block;
   resize: none;
   width: 100%;
@@ -109,10 +109,10 @@
     color: rgba(117, 117, 117, 0.5);
   }
 }
-.modal-checkbox-field {
+.modal__checkbox-field {
   margin-bottom: 30px;
 }
-.modal-check-text {
+.modal__checkbox-text {
   @extend %flex-elements;
   @include modal-check-font();
   color: var(--main-text-color);
@@ -125,32 +125,32 @@
     margin-right: 8px;
   }
 }
-.icon-check {
+.checkbox-icon {
   fill: transparent;
 }
-.modal-check:focus + .modal-check-text {
+.modal__checkbox:focus + .modal__checkbox-text {
   span {
     border-color: var(--main-blue-color);
   }
 }
-.modal-check:checked + .modal-check-text {
+.modal__checkbox:checked + .modal__checkbox-text {
   span {
     background-color: var(--main-blue-color);
     border: none;
   }
 }
-.modal-check:checked + .modal-check-text {
-  .icon-check {
+.modal__checkbox:checked + .modal__checkbox-text {
+  .checkbox-icon {
     fill: var(--main-white-color);
   }
 }
-.terms-link {
+.checkbox__terms {
   @include modal-check-font();
   color: var(--main-blue-color);
   text-decoration: underline solid var(--main-blue-color);
   text-decoration-skip-ink: none;
 }
-.modal-submit-btn {
+.modal__submit-button {
   @extend %flex-elements;
   padding: 10px 32px;
   margin-left: auto;
