--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,7 +1,7 @@
 .header {
   border-bottom: solid 1px var(--header-bottom-border-color);
 }
-.header-container {
+.header-wrap {
   display: flex;
   align-items: center;
 }
@@ -12,7 +12,7 @@
   @include logo-font();
   color: var(--main-blue-color);
 }
-.r-logo-header {
+.header-logo__right {
   @include logo-font();
   color: var(--main-black-color);
 }
@@ -23,10 +23,10 @@
 .nav-list {
   display: flex;
 }
-.nav-item:not(:last-child) {
+.nav__item:not(:last-child) {
   margin-right: 50px;
 }
-.nav-link {
+.nav__item-link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -39,7 +39,7 @@
     color: var(--main-blue-color);
   }
 }
-.nav-link-current {
+.nav__item-link-current {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -57,16 +57,16 @@
     bottom: -1px;
   }
 }
-.contacts-list {
+.header-contacts-list {
   display: flex;
   margin-left: 305px;
   justify-content: center;
   align-content: center;
 }
-.contacts-item:not(:last-child) {
+.contacts__item:not(:last-child) {
   margin-right: 30px;
 }
-.contacts-link {
+.contacts-item__link {
   display: flex;
   justify-content: center;
   align-content: center;
