--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -1,21 +1,21 @@
-.our-team-section {
+.team {
   background-color: var(--secondary-background-color);
 }
-.our-team-title {
+.team__title {
   margin-bottom: 50px;
   @include main-title-font();
   color: var(--secondary-black-color);
 }
-.our-team-list {
+.team-list {
   display: flex;
   flex-wrap: wrap;
 }
-.our-team-member {
+.team__item-title {
   margin-bottom: 10px;
   @include our-team-subtitle-font();
   color: var(--secondary-black-color);
 }
-.our-team-item {
+.team__item {
   margin-right: 30px;
   background-color: var(--main-white-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -25,19 +25,19 @@
     margin-right: 0px;
   }
 }
-.team-mate-info {
+.team__item-info {
   padding: 30px 32px;
 }
-.our-team-position {
+.team__item-text {
   margin-bottom: 16px;
   @include our-team-text-font();
   color: var(--main-text-color);
 }
-.social-links-list {
+.team__socials-list {
   display: flex;
   justify-content: center;
 }
-.social-links-item {
+.socials__item {
   width: 44px;
   height: 44px;
   &:not(:last-child) {
@@ -45,7 +45,7 @@
   }
 }
 
-.social-link {
+.socials__item-link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -63,7 +63,7 @@
   }
 }
 
-.social-link-icon {
+.social-icon {
   fill: var(--social-links-icon-color);
   transition: fill var(--main-effects-option);
 }
