--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -1,10 +1,10 @@
-.projects-filter-list {
+.projects-filter {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 50px;
   justify-content: center;
 }
-.filter-btn {
+.project__filter-btn {
   padding: 6px 22px 6px 22px;
   border: none;
   border-radius: 4px;
@@ -24,19 +24,20 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
+  &.current {
+    background-color: var(--main-blue-color);
+    color: var(--main-white-color);
+  }
 }
-.filter-btn.current {
-  background-color: var(--main-blue-color);
-  color: var(--main-white-color);
-}
-.projects-filter-item:not(:last-child) {
+
+.projects-filter__item:not(:last-child) {
   margin-right: 8px;
 }
 .projects-list {
   display: flex;
   flex-wrap: wrap;
 }
-.projects-item {
+.projects__item {
   margin-right: 30px;
   margin-bottom: 30px;
   width: 370px;
@@ -45,7 +46,7 @@
     margin-right: 0px;
   }
 }
-.project-link {
+.project__item-link {
   display: block;
   max-width: 100%;
   height: 100%;
@@ -56,33 +57,33 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
   }
-  &:hover .project-about,
-  &:focus .project-about,
-  &:active .project-about {
+  &:hover .project__overlay-text,
+  &:focus .project__overlay-text,
+  &:active .project__overlay-text {
     transform: translateY(0);
   }
 }
 
-.projects-text-container {
+.projects__about-wrap {
   padding: 20px 24px;
   border-right: solid 1px var(--portfolio-item-border-color);
   border-left: solid 1px var(--portfolio-item-border-color);
   border-bottom: solid 1px var(--portfolio-item-border-color);
 }
-.projects-subtitle {
+.project__title {
   padding-top: 4px;
   @include projects-subtitle-font();
   color: var(--secondary-black-color);
 }
-.projects-text {
+.projects__about-text {
   @include projects-text-font();
   color: var(--main-text-color);
 }
-.overlay-wrapper {
+.project__overlay-wrapper {
   position: relative;
   overflow: hidden;
 }
-.project-about {
+.project__overlay-text {
   @include portfolio-overlay-font();
   background-color: rgba(33, 150, 243, 0.9);
   color: rgba(255, 255, 255, 1);
