--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -110,6 +110,9 @@
   }
 }
 .modal__checkbox-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 30px;
 }
 .modal__checkbox-text {
