--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./vendors/modern-normalize";
 @import "./utils/reset";
+@import "./utils/fonts";
 @import "./utils/variables";
 @import "./components/container";
 @import "./utils/visually-hidden";
