--- a/css/main.css
+++ b/css/main.css
@@ -357,20 +357,18 @@ body {
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 24px;
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Raleway;
   font-size: 26px;
+  font-weight: 700;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-blue-color);
 }
 
 .header-logo__right {
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Raleway;
   font-size: 26px;
+  font-weight: 700;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-black-color);
@@ -393,11 +391,9 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  text-decoration: none;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-black-color);
@@ -412,11 +408,9 @@ body {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  text-decoration: none;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-blue-color);
@@ -452,11 +446,9 @@ body {
   align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
-  text-decoration: none;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
@@ -616,7 +608,7 @@ body {
 .our-work__item-overlay {
   width: 100%;
   height: 70px;
-  padding: 27px 0px 27px 0px;
+  padding: 27px 0px 0px 0px;
   text-align: center;
   background-color: rgba(47, 48, 58, 0.8);
   position: absolute;
@@ -723,8 +715,8 @@ body {
   background-color: var(--main-blue-color);
 }
 
-.socials__item-link:hover .social-link-icon,
-.socials__item-link:focus .social-link-icon {
+.socials__item-link:hover .social-icon,
+.socials__item-link:focus .social-icon {
   fill: var(--main-white-color);
 }
 
@@ -900,7 +892,7 @@ body {
 }
 
 .subscribe {
-  margin-left: 93px;
+  margin-left: auto;
 }
 
 .subscribe-form {
@@ -1232,6 +1224,9 @@ body {
 }
 
 .modal__checkbox-field {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin-bottom: 30px;
 }
 
