--- a/sass/layouts/_our-team.scss
+++ b/sass/layouts/_our-team.scss
@@ -57,8 +57,8 @@
   &:focus {
     background-color: var(--main-blue-color);
   }
-  &:hover .social-link-icon,
-  &:focus .social-link-icon {
+  &:hover .social-icon,
+  &:focus .social-icon {
     fill: var(--main-white-color);
   }
 }
