--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -23,6 +23,9 @@
   background-size: cover;
 }
 .hero__order-btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
   padding: 10px 32px;
   margin-left: auto;
   margin-right: auto;
@@ -30,7 +33,6 @@
   border: none;
   border-radius: 4px;
   @include main-buttons-font();
-  @extend %flex-elements;
   color: var(--main-white-color);
   cursor: pointer;
   transition: color var(--main-effects-option),
