--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -5,11 +5,13 @@
   justify-content: center;
 }
 .project__filter-btn {
+  display: flex;
+  align-items: center;
+  text-align: center;
   padding: 6px 22px 6px 22px;
   border: none;
   border-radius: 4px;
   @include portfolio-filter-btn-font();
-  @extend %flex-elements;
   background-color: var(--secondary-background-color);
   color: var(--secondary-black-color);
   cursor: pointer;
