--- a/css/main.css
+++ b/css/main.css
@@ -730,12 +730,11 @@ body {
 
 .customers__title {
   margin-bottom: 50px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
   text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-black-color);
 }
