--- a/css/main.css
+++ b/css/main.css
@@ -557,21 +557,19 @@ body {
 
 .features-item__title {
   margin-bottom: 10px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  text-transform: uppercase;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: var(--secondary-black-color);
 }
 
 .features-item__text {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
