--- a/css/main.css
+++ b/css/main.css
@@ -782,20 +782,18 @@ body {
 .footer-logo {
   display: block;
   margin-bottom: 20px;
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Raleway;
   font-size: 26px;
+  font-weight: 700;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-blue-color);
 }
 
 .footer-logo__right {
-  font-family: Raleway, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Raleway;
   font-size: 26px;
+  font-weight: 700;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-white-color);
@@ -807,24 +805,23 @@ body {
 
 .footer-contacts__item-address {
   margin-bottom: 9px;
-  font-family: Roboto, sans-serif;
   font-style: normal;
-  font-weight: 400;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--main-white-color);
 }
 
 .contacts-link-footer {
-  text-decoration: none;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: normal;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--transparent-white-color);
+  font-style: normal;
   transition: color var(--main-effects-option);
 }
 
@@ -877,13 +874,11 @@ body {
 
 .join-us__text {
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: var(--main-white-color);
 }
 
@@ -901,13 +896,12 @@ body {
 
 .subscribe__title {
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  text-transform: uppercase;
+  font-family: Roboto;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: var(--main-white-color);
 }
 
@@ -922,10 +916,9 @@ body {
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
+  font-family: Roboto;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.25;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
@@ -942,10 +935,9 @@ body {
   background-color: var(--main-blue-color);
   border: none;
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Roboto;
   font-size: 16px;
+  font-weight: 700;
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: var(--main-white-color);
