--- a/css/main.css
+++ b/css/main.css
@@ -634,12 +634,11 @@ body {
 
 .team__title {
   margin-bottom: 50px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
   text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-black-color);
 }
@@ -651,12 +650,11 @@ body {
 
 .team__item-title {
   margin-bottom: 10px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
   text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--secondary-black-color);
 }
@@ -678,12 +676,11 @@ body {
 
 .team__item-text {
   margin-bottom: 16px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.19;
   text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
 }
