--- a/css/main.css
+++ b/css/main.css
@@ -577,12 +577,11 @@ body {
 
 .our-work__title {
   margin-bottom: 50px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
   text-align: center;
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--secondary-black-color);
 }
@@ -617,14 +616,12 @@ body {
   bottom: 0;
   transform: translateY(100%);
   transition: transform var(--main-effects-option);
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
   color: var(--main-white-color);
 }
 
