--- a/css/main.css
+++ b/css/main.css
@@ -964,14 +964,13 @@ body {
   padding: 6px 22px 6px 22px;
   border: none;
   border-radius: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 500;
+  font-family: Roboto;
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.62;
   letter-spacing: 0.03em;
-  background-color: var(--secondary-background-color);
   color: var(--secondary-black-color);
+  background-color: var(--secondary-background-color);
   cursor: pointer;
   transition: color var(--main-effects-option), background-color var(--main-effects-option), box-shadow var(--main-effects-option);
 }
@@ -1033,20 +1032,18 @@ body {
 
 .project__title {
   padding-top: 4px;
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 700;
+  font-family: Roboto;
   font-size: 18px;
+  font-weight: 700;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-black-color);
 }
 
 .projects__about-text {
-  font-family: Roboto, sans-serif;
-  font-style: normal;
-  font-weight: 400;
+  font-family: Roboto;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--main-text-color);
@@ -1058,6 +1055,12 @@ body {
 }
 
 .project__overlay-text {
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: white;
   font-family: Roboto, sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -1065,7 +1068,6 @@ body {
   line-height: 1.56;
   letter-spacing: 0.03em;
   background-color: rgba(33, 150, 243, 0.9);
-  color: white;
   position: absolute;
   top: 0;
   left: 0;
