--- a/sass/layouts/_projects.scss
+++ b/sass/layouts/_projects.scss
@@ -11,9 +11,8 @@
   padding: 6px 22px 6px 22px;
   border: none;
   border-radius: 4px;
-  @include portfolio-filter-btn-font();
+  @include font(Roboto, 16px, 500, 1.62, 0.03em, var(--secondary-black-color));
   background-color: var(--secondary-background-color);
-  color: var(--secondary-black-color);
   cursor: pointer;
   transition: color var(--main-effects-option),
     background-color var(--main-effects-option),
@@ -74,21 +73,19 @@
 }
 .project__title {
   padding-top: 4px;
-  @include projects-subtitle-font();
-  color: var(--secondary-black-color);
+  @include font(Roboto, 18px, 700, 2, 0.06em, var(--secondary-black-color));
 }
 .projects__about-text {
-  @include projects-text-font();
-  color: var(--main-text-color);
+  @include font(Roboto, 16px, 400, 1.87, 0.03em, var(--main-text-color));
 }
 .project__overlay-wrapper {
   position: relative;
   overflow: hidden;
 }
 .project__overlay-text {
+  @include font(Roboto, 18px, 400, 1.56, 0.03em, rgba(255, 255, 255, 1));
   @include portfolio-overlay-font();
   background-color: rgba(33, 150, 243, 0.9);
-  color: rgba(255, 255, 255, 1);
   position: absolute;
   top: 0;
   left: 0;
